must-gather.local.7541592903822836477/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-ccdc0abcf68b276b781a774d7630503a6b323c7cedea8e5636b09dd759dd226a/namespaces/openshift-ingress-canary/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/balance: roundrobin
    creationTimestamp: "2024-06-11T11:07:04Z"
    labels:
      ingress.openshift.io/canary: canary_controller
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:haproxy.router.openshift.io/balance: {}
          f:labels:
            .: {}
            f:ingress.openshift.io/canary: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"a70220c9-7d99-4888-a2f3-0b0a6626d79e"}: {}
        f:spec:
          f:port:
            .: {}
            f:targetPort: {}
          f:subdomain: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: ingress-operator
      operation: Update
      time: "2024-06-11T11:07:04Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:host: {}
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2024-06-11T11:07:04Z"
    name: canary
    namespace: openshift-ingress-canary
    ownerReferences:
    - apiVersion: apps/v1
      controller: true
      kind: daemonset
      name: ingress-canary
      uid: a70220c9-7d99-4888-a2f3-0b0a6626d79e
    resourceVersion: "26157"
    uid: 14364b4a-fa72-42e3-aad3-6ee7a5bafd10
  spec:
    port:
      targetPort: 8080
    subdomain: canary-openshift-ingress-canary
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: ingress-canary
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-06-11T11:07:04Z"
        status: "True"
        type: Admitted
      host: canary-openshift-ingress-canary.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerCanonicalHostname: router-default.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "39943"
